# QtCommunication

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qg_netportsettings.cpp  qg_netportsettings.h  qg_netportsettings.ui  qg_serialportsettings.cpp  qg_serialportsettings.h  qg_serialportsettings.ui  rk_commuser.cpp  rk_commuser.h  rk_device.cpp  rk_device.h  rk_device_p.cpp  rk_device_p.h  rk_devicemanager.cpp  rk_devicemanager.h  rk_savehelper.cpp  rk_savehelper.h  rk_serialport.cpp  rk_serialport.h  rk_tcpclient.cpp  rk_tcpclient.h  rk_tcpserver.cpp  rk_tcpserver.h  rk_udpnet.cpp  rk_udpnet.h
